amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-members-union-extension.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-members-union-extension.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-union-members
  Message: Union must have at most one member with name 'Dog'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-members-union-extension.api.graphql#/declares/union/SearchResult/or/union/SearchResult_1
  Property: http://a.ml/vocabularies/shapes#anyOf
  Range: [(14,0)-(17,0)]
  Location: 
